内核和用户空间通信机制构建完成

--- a/linuxModule/my_firewall/Makefile
+++ b/linuxModule/my_firewall/Makefile
@@ -1,6 +1,6 @@
 KERN_DIR = /usr/src/linux-headers-5.4.0-89-generic
 # KERN_DIR = /lib/modules/$(shell uname -r)/build
-myfw-objs := my_firewall.o #my_dev.o
+myfw-objs := dya_firewall.o dya_firewall-lkm.o dya_utils.o #my_dev.o
 obj-m += myfw.o
 
 all:
