--- a/linuxModule/my_firewall/Makefile
+++ b/linuxModule/my_firewall/Makefile
@@ -1,6 +1,6 @@
 KERN_DIR = /usr/src/linux-headers-5.4.0-89-generic
 # KERN_DIR = /lib/modules/$(shell uname -r)/build
-myfw-objs := linux_module.o dya_firewall.o dya_utils.o nl_kernel.o 
+myfw-objs := linux_module.o netfltrFunc.o utils.o nl_kernel.o 
 
 obj-m += myfw.o
 
@@ -9,7 +9,7 @@ all:mod app
 mod:
 	make -C $(KERN_DIR) M=$(shell pwd) modules   
 app:
-	gcc -o nl_client nl_client.c
+	gcc -o nl_client nl_client.c client_util.c
 clean:                                  
 	make -C $(KERN_DIR) M=$(shell pwd) modules clean
 	rm -rf modules.order
